@@ -105,14 +105,6 @@ RELEASE SHOWSTOPPERS:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ start all new proposals below, under PATCHES PROPOSED. ]
 
- * mod_rewrite: Fix the error string returned by RewriteRule.
-   RewriteRule returned "RewriteCond: bad flag delimiters"
-   when the 3rd argument of RewriteRule  was not started with
-   "[" or not ended with "]". PR: 45082
-   Trunk version of patch works:
-       http://svn.apache.org/viewvc?view=rev&revision=776325
-   +1: takashi, rpluem, jim
-
 
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
   [ New proposals should be added at the end of the list ]
